--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,10 @@ dependencies:
   url_launcher: ^5.7.2
   image_picker: ^0.6.7+10
   firebase_analytics: ^6.0.0
-  firebase_ml_vision: ^0.9.10
+  firebase_ml_vision: ^0.9.6+2
   avatar_glow: ^1.2.0
   highlight_text: ^0.7.2
   speech_to_text: 2.5.0
-  mlkit: ^0.15.1
 
   flutter:
     sdk: flutter
